--- a/projetsite.html
+++ b/projetsite.html
@@ -8,7 +8,10 @@
 <title>Title of the document</title>
 </head>
 <link rel="stylesheet" type="text/css" href="styles.css">
+<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <body>
+  <div class="opacity">
+
   <div id="doc">
 
 	<!--menu-->
@@ -41,22 +44,36 @@
    <p>All videos</p>
 </div>
 <div class="video">
+  <table id="img">
+    <tr>
+      <td>
     <div class="rose">
        <img src="images/larose.jpg"/>
         <p> Like A Rose - Ashley Monroe</p>
     </div>
+  </td>
+  <div class="ligne-height" ></div>
+  <td>
     <div class="guit">
        <img src="images/guitare.jpg" />
         <p> Big Love - Carrie Rodriguez </p>
 	  </div>
+  </td>
+  <div class="ligne_verticale" ></div>
+  <td>
     <div class="june">
        <img src="images/june.jpg"/>
         <p> Waiting On June - Holly Williams </p>
 	  </div>
+  </td>
+  </tr>
+  </table>
 </div>
 
 
 <!--gigs-->
+<div class="gigs">
+
   <h3>UPCOMING GIGS</h3>
 <table class="tab">
    <tr >
@@ -90,6 +107,9 @@
   <td>The Hamilton</td>
 </tr>
 </table>
+<p>VIEW ALL GIGS</P>
+  <hr></hr>
+</div>
 
 <!--mid-->
 <div class="mid">
@@ -109,8 +129,25 @@
       <p>DECEMBER 16, 2014</p>
     <h5>HISTORY OF POPULAR MUSIC</h5>
      <p>DECEMBER 15, 2014</p>
-  </div>
-
+   </div>
+ </div>
+ <hr></hr>
+<div class="foot">
+ <div id="share">
+   <i href="" class="fa fa-twitter fa-lg" style="color:white"></i>
+   <i href="" class="fa fa-facebook-official fa-lg"style="color:white"></i>
+   <i class="fa fa-instagram fa-lg"style="color:white"></i>
+   <i class="fa fa-youtube-play fa-lg"style="color:white"></i>
+   <i class="fa fa-vimeo fa-lg"style="color:white"></i>
+   <i class="fa fa-amazon fa-lg"style="color:white"></i>
+   <i class="fa fa-apple fa-lg"style="color:white"></i>
+   <i class="fa fa-soundcloud fa-lg"style="color:white"></i>
+   <i class="fa fa-reddit-alien fa-lg"style="color:white"></i>
+   <i class="fa fa-spotify fa-lg"style="color:white"></i>
+</div>
+ <p>
+  OBSIDIAN MUSIC THEME BY AUDIOTHEME.
+ </p>
 </div>
 
 
@@ -124,5 +161,15 @@
 
 
 
+
+
+
+
+
+
+
+
+
+</div> <!--opacity-->
 </div>
 </body>
