--- a/projetsite.html
+++ b/projetsite.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <body>
-  <div class="opacity">
+<div class="opacity">
 
   <div id="doc">
 
@@ -30,110 +30,107 @@
         </ul>
       </nav>
     </header>
-  </div>
+  </div><!--container-->
 
   <!--videos-->
 
-<div class="pro">
-   <h1>PROJET AUDIO</h1>
+  <div class="pro">
+     <h1>PROJET AUDIO</h1>
      <p>SUBTITLE...</p>
-</div>
+  </div><!--pro-->
 
-<div class="titres">
-  <h2>VIDEOS</h2>
-   <p>All videos</p>
-</div>
+  <div class="titres">
+     <h2>VIDEOS</h2>
+     <p>All videos</p>
+  </div><!--titres-->
+
 <div class="video">
-  <table id="img">
-    <tr>
-      <td>
-    <div class="rose">
+      <div class="rose">
        <img src="images/larose.jpg"/>
-        <p> Like A Rose - Ashley Monroe</p>
-    </div>
-  </td>
-  <div class="ligne-height" ></div>
-  <td>
-    <div class="guit">
+       <p> Like A Rose - Ashley Monroe</p>
+      </div><!--rose-->
+
+      <div class="guit">
        <img src="images/guitare.jpg" />
-        <p> Big Love - Carrie Rodriguez </p>
-	  </div>
-  </td>
-  <div class="ligne_verticale" ></div>
-  <td>
-    <div class="june">
+       <p> Big Love - Carrie Rodriguez </p>
+      </div><!--guit-->
+
+      <div class="june">
        <img src="images/june.jpg"/>
-        <p> Waiting On June - Holly Williams </p>
-	  </div>
-  </td>
-  </tr>
-  </table>
-</div>
+       <p> Waiting On June - Holly Williams </p>
+     </div><!--june-->
+ </div><!--video-->
 
 
 <!--gigs-->
 <div class="gigs">
-
   <h3>UPCOMING GIGS</h3>
-<table class="tab">
-   <tr >
-      <td>SEP</td>
-      <td><strong>14</strong></td>
-      <td>Nashville, TN</td>
-      <td>The Bluebird Cafe</td>
-   </tr>
-   <tr>
-     <td>SEP</td>
-     <td><strong>16</strong></td>
-     <td>Seattle, WA</td>
-     <td>Tractor Tavern</td>
-   </tr>
-   <tr>
-     <td>SEP</td>
-     <td><strong>17</strong></td>
-     <td>Alexandria, VA</td>
-     <td>The Birshmere</td>
-     </tr>
-<tr>
-  <td>SEP</td>
-  <td><strong>25</strong></td>
-  <td>Washington, DC</td>
-  <td>The Hamilton</td>
-</tr>
-<tr>
-  <td>OCT</td>
-  <td><strong>30</strong></td>
-  <td>Chipping Ongar, </td>
-  <td>The Hamilton</td>
-</tr>
-</table>
-<p>VIEW ALL GIGS</P>
-  <hr></hr>
-</div>
+   <div class="dates">
+
+    <div class="mois">
+      <p>SEP</p>
+      <p>SEP</p>
+      <p>SEP</p>
+      <p>SEP</p>
+      <p>OCT</p>
+    </div><!--mois-->
+
+    <div class="jours">
+      <p><strong>14</strong></p>
+      <p><strong>16</strong></p>
+      <p><strong>17</strong></p>
+      <p><strong>25</strong></p>
+      <p><strong>30</strong></p>
+    </div><!--jours-->
+
+    <div class="ville">
+      <p>Nashville, TN</p>
+      <p>Seatle, WA</p>
+      <p>Alexandria, VA</p>
+      <p>Washington, DC</p>
+      <p>Chipping Ongar, Essex</p>
+    </div><!--ville-->
+
+    <div class="salle">
+      <p>The Bluebird Cafe</p>
+      <p>Tractor Tavern</p>
+      <p>The Birshmere</p>
+      <p>The Hamilton</p>
+      <p>Zinc Arts Center</p>
+   </div><!--salle-->
+
+ </div><!--dates-->
+   <p>VIEW ALL GIGS</P>
+   <hr></hr>
+ </div><!--gigs-->
 
 <!--mid-->
 <div class="mid">
   <div class="obs">
-    <h3>ABOUT OBSIDIAN</h3>
-     <p>The Obsidian theme, like the naturally occuring volcanic glass of the same name, possesses an inherent allure that's stylish in appearence and practical in purpose. With distinctive background options and various customization possibilities, Obsidian makes it easy to create the ultimate hub for your online identity.</p>
-  </div>
+     <h3>ABOUT OBSIDIAN</h3>
+      <p>The Obsidian theme, like the naturally occuring volcanic glass of the same name, possesses an inherent allure that's stylish in appearence and practical in purpose. With distinctive background options and various customization possibilities, Obsidian makes it easy to create the ultimate hub for your online identity.</p>
+  </div><!--obs-->
+
   <div class="viv">
     <h3>VIVIENNE'S OMITTED LINE</h3>
      <img src="images/album-03-300x300.jpg"/>
-  </div>
+  </div><!--viv-->
+
   <div class="posts">
     <h3>RECENT POSTS</h3>
      <h5>Welcome to our redisigned website</h5>
-      <p>APRIL 1, 2015</p>
+       <p>APRIL 1, 2015</p>
      <h5>New tour dates posted</h5>
-      <p>DECEMBER 16, 2014</p>
-    <h5>HISTORY OF POPULAR MUSIC</h5>
-     <p>DECEMBER 15, 2014</p>
-   </div>
- </div>
+       <p>DECEMBER 16, 2014</p>
+     <h5>HISTORY OF POPULAR MUSIC</h5>
+       <p>DECEMBER 15, 2014</p>
+   </div><!--posts-->
+ </div><!--mid-->
+
  <hr></hr>
 <div class="foot">
- <div id="share">
+
+  <div id="share">
    <i href="" class="fa fa-twitter fa-lg" style="color:white"></i>
    <i href="" class="fa fa-facebook-official fa-lg"style="color:white"></i>
    <i class="fa fa-instagram fa-lg"style="color:white"></i>
@@ -144,11 +141,10 @@
    <i class="fa fa-soundcloud fa-lg"style="color:white"></i>
    <i class="fa fa-reddit-alien fa-lg"style="color:white"></i>
    <i class="fa fa-spotify fa-lg"style="color:white"></i>
-</div>
- <p>
-  OBSIDIAN MUSIC THEME BY AUDIOTHEME.
- </p>
-</div>
+ </div><!--share-->
+
+  <p>OBSIDIAN MUSIC THEME BY AUDIOTHEME.</p>
+</div><!--foot-->
 
 
 
@@ -171,5 +167,5 @@
 
 
 </div> <!--opacity-->
-</div>
+</div><!--doc-->
 </body>
