--- a/videos.html
+++ b/videos.html
@@ -1,13 +1,10 @@
-
-
-
-
 <!DOCTYPE html>
 <html>
 <head>
 <title>Title of the document</title>
 </head>
-<link rel="stylesheet" type="text/css" href="styles.css">
+<meta charset="utf-8">
+<link rel="stylesheet" type="text/css" href="videos.css">
 <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 <body>
 <div class="opacity">
@@ -16,8 +13,9 @@
 
 	<!--menu-->
   <div class="container">
-    <header class="main">
-      <nav>
+
+      <header class="main">
+       <nav>
         <ul>
           <li><a href="">HOME</a></li>
           <li><a href="">BIO</a></li>
@@ -30,79 +28,55 @@
         </ul>
       </nav>
     </header>
-  </div><!--container-->
 
-  <!--videos-->
-
-<div class="pro">
-   <h1>PROJET AUDIO</h1>
-     <p>SUBTITLE...</p>
-</div><!--pro-->
-
-<div class="titres">
-  <h2>VIDEOS</h2>
-   <p>All videos</p>
-</div><!--titres-->
+    <div class="pro">
+       <h1>OBSIDIAN</h1>
+         <p>VIDEOS</p>
+          <hr></hr>
+    </div><!--pro-->
+</div><!--container-->
 
 <div class="video">
+
+ <div class="haut">
+
       <div class="rose">
        <img src="images/larose.jpg"/>
-       <p> Like A Rose - Ashley Monroe</p>
+       <a href=""> Like A Rose - Ashley Monroe</a>
       </div><!--rose-->
 
       <div class="guit">
        <img src="images/guitare.jpg" />
-       <p> Big Love - Carrie Rodriguez </p>
+       <a href=""> Big Love - Carrie Rodriguez </a>
       </div><!--guit-->
 
       <div class="june">
        <img src="images/june.jpg"/>
-       <p> Waiting On June - Holly Williams </p>
-     </div><!--june-->
- </div><!--video-->
+       <a href=""> Waiting On June - Holly Williams </a>
+      </div><!--june-->
 
+   </div><!--haut-->
 
-<!--gigs-->
-<div class="gigs">
-  <h3>UPCOMING GIGS</h3>
-   <div class="dates">
+   <div class="bas">
+     <div class="doors">
+      <img src="images/larose.jpg"/>
+      <a href="">Numbered Doors - Lori McKenna </a>
+     </div><!--doors-->
 
-    <div class="mois">
-      <p>SEP</p>
-      <p>SEP</p>
-      <p>SEP</p>
-      <p>SEP</p>
-      <p>OCT</p>
-    </div><!--mois-->
+     <div class="holly">
+      <img src="images/larose.jpg"/>
+      <a href="">Hollywood - Robyn Ludwick</a>
+    </div><!--holly-->
 
-    <div class="jours">
-      <p><strong>14</strong></p>
-      <p><strong>16</strong></p>
-      <p><strong>17</strong></p>
-      <p><strong>25</strong></p>
-      <p><strong>30</strong></p>
-    </div><!--jours-->
+     <div class="young">
+      <img src="images/larose.jpg"/>
+      <a href="">Young Blood - Heater Christian & the Arbornauts</a>
+    </div><!--youg-->
 
-    <div class="ville">
-      <p>Nashville, TN</p>
-      <p>Seatle, WA</p>
-      <p>Alexandria, VA</p>
-      <p>Washington, DC</p>
-      <p>Chipping Ongar, Essex</p>
-    </div><!--ville-->
+  </div><!--bas-->
 
-    <div class="salle">
-      <p>The Bluebird Cafe</p>
-      <p>Tractor Tavern</p>
-      <p>The Birshmere</p>
-      <p>The Hamilton</p>
-      <p>Zinc Arts Center</p>
-   </div><!--salle-->
+</div><!--video-->
 
- </div><!--dates-->
-   <p>VIEW ALL GIGS</P>
-  <hr></hr>
-</div><!--gigs-->
 
 <!--mid-->
 <div class="mid">
@@ -110,7 +84,7 @@
     <h3>ABOUT OBSIDIAN</h3>
      <p>The Obsidian theme, like the naturally occuring volcanic glass of the same name, possesses an inherent allure that's stylish in appearence and practical in purpose. With distinctive background options and various customization possibilities, Obsidian makes it easy to create the ultimate hub for your online identity.</p>
   </div><!--obs-->
-
+       <br></br>
   <div class="viv">
     <h3>VIVIENNE'S OMITTED LINE</h3>
      <img src="images/album-03-300x300.jpg"/>
@@ -128,6 +102,7 @@
  </div><!--mid-->
 
  <hr></hr>
+
 <div class="foot">
 
  <div id="share">
@@ -154,20 +129,7 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</div> <!--opacity-->
+</div><!--opacity-->
 </div><!--doc-->
-</body>
+</body><!--body-->
+</html>
